--- a/src/components/TransactionHistory/Transaction.module.css
+++ b/src/components/TransactionHistory/Transaction.module.css
@@ -1,8 +1,8 @@
 .table {
   border: 1px solid #808080;
   background-color: #EEEEEE;
-  width: 90%;
   border-collapse: collapse;
+  min-width: 300px;
   margin: 0 auto 30px;
 }
 
